--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>hulu</title>
     <link href="assets/img/favicon.png" rel="icon">
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="/css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -18,7 +18,7 @@
 
         <header>
             <nav class="mx-4 bg-transparent navbar navbar-light bg-light justify-content-between">
-                <a class="navbar-brand"><img src="/images/Hulu-Logo.main.png" alt=""></a>
+                <a class="navbar-brand"><img src="images/Hulu-Logo.main.png" alt=""></a>
                 <form class="form-inline">
                     <button
                         class="btn btn-outline-success my-2 my-sm-0 border border-0 bg-transparent text-secondary .btn-outline"
@@ -40,7 +40,7 @@
 
                 <div class="row">
                     <div class="col-12 d-flex justify-content-center">
-                        <img class="image-fluid" src="/images/log png.png" alt="">
+                        <img class="image-fluid" src="images/log png.png" alt="">
                     </div>
                 </div>
 
@@ -123,7 +123,7 @@
                     </div>
                     <div class="col-md-3">
                         <div class="card bg-dark text-white">
-                            <img src="/images/card2.jpg" class="card-img" alt="...">
+                            <img src="images/card2.jpg" class="card-img" alt="...">
                             <div class="card-img-overlay">
                                 <h5 class="">New and Classic movies</h5>
                                 <p class="card-text">Movies</p>
@@ -141,7 +141,7 @@
                     </div>
                     <div class="col-md-3">
                         <div class="card bg-dark text-white">
-                            <img src="/images/card4.jpg" class="card-img" alt="...">
+                            <img src="images/card4.jpg" class="card-img" alt="...">
                             <div class="card-img-overlay">
                                 <h5 class="card-title">Add On</h5>
                                 <p class="card-text">Premiums</p>
@@ -236,16 +236,16 @@
 
                 <div class="row mb-3" id="hidden">
                     <div class="col-2 rounded-circle bg-white me-3 ms-3">
-                        <img src="/images/banner2 (1).png" alt="">
+                        <img src="images/banner2 (1).png" alt="">
                     </div>
                     <div class="col-2 rounded-circle bg-white me-3">
-                        <img src="/images/Banner2(2).png" alt="">
+                        <img src="images/Banner2(2).png" alt="">
                     </div>
                     <div class="col-2 rounded-circle bg-white me-3">
-                        <img src="/images/banner2(3).svg" alt="">
+                        <img src="images/banner2(3).svg" alt="">
                     </div>
                     <div class="col-2 rounded-circle bg-white me-3">
-                        <img src="/images/banner2(4).png" alt="">
+                        <img src="images/banner2(4).png" alt="">
                     </div>
                 </div>
             </div>
@@ -316,10 +316,10 @@
                     </ul>
                 </div>
             </div>
-            <span><img src="/images/facebook.svg" alt="" class="me-3"></span>
-            <span><img src="/images/instagram.svg" alt="" class="me-3"></span>
-            <span><img src="/images/twitter.svg" alt="" class="me-3"></span>
-            <span><img src="/images/youtube.svg" alt="" class="me-3"></span>
+            <span><img src="images/facebook.svg" alt="" class="me-3"></span>
+            <span><img src="images/instagram.svg" alt="" class="me-3"></span>
+            <span><img src="images/twitter.svg" alt="" class="me-3"></span>
+            <span><img src="images/youtube.svg" alt="" class="me-3"></span>
         </div>
     </footer>
 
@@ -329,7 +329,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
         crossorigin="anonymous"></script>
-    <script src="/js/bootstrap.js"></script>
+    <script src="js/bootstrap.js"></script>
 </body>
 
 </html>
