--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>hulu</title>
     <link href="assets/img/favicon.png" rel="icon">
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
+    <link rel="stylesheet"  href="style.css" type="text/css">
 </head>
 
 <body>
