--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <div class="row justify-content-center">
                     <div class="col-md-3">
                         <div class="card bg-dark text-white">
-                            <img src="/images/card1.jpg" class="card-img" alt="...">
+                            <img src="images/card1.jpg" class="card-img" alt="...">
                             <div class="card-img-overlay">
                                 <h5 class="card-title">Past and current seasons</h5>
                                 <p class="card-text">Tv shows</p>
